--- a/miniprogram/pages/topic/tpcWords/tpcWords.wxss
+++ b/miniprogram/pages/topic/tpcWords/tpcWords.wxss
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: auto;
     margin-top: 3%;
     margin-left: 2%;
     margin-right: 2%;
