--- a/miniprogram/pages/welcome/welcom.wxss
+++ b/miniprogram/pages/welcome/welcom.wxss
@@ -18,3 +18,17 @@
     align-items: center;
     justify-content: center;
   }
+
+  .make{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 77rpx;
+    margin-bottom:0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #807878;
+    font-size: small;
+  }
